@@ -31,12 +31,14 @@ https://github.com/elastic/beats/compare/v6.4.0...6.4[Check the HEAD diff]
 
 - Fixed `add_host_metadata` not initializing correctly on Windows. {issue}7715[7715]
 - Add backoff on error support to redis output. {pull}7781[7781]
+- Fixed `-d` CLI flag by trimming spaces from selectors. {pull}7864[7864]
 - Fixed missing file unlock in spool file on Windows, so file can be reopened and locked. {pull}7859[7859]
 - Fix spool file opening/creation failing due to file locking on Windows. {pull}7859[7859]
 - Fix size of maximum mmaped read area in spool file on Windows. {pull}7859[7859]
 - Fix potential data loss on OS X in spool file by using fcntl with F_FULLFSYNC. {pull}7859[7859]
 - Improve fsync on linux, by assuming the kernel resets error flags of failed writes. {pull}7859[7859]
 - Remove unix-like permission checks on Windows, so files can be opened. {issue}7849[7849]
+- Deregister pipeline loader callback when inputsRunner is stopped. {pull}[7893][7893]
 
 *Auditbeat*
 
